# singed

./: .gitignore  .gitmodules  LICENSE  README.md  handler.py  setup.sh
Singed/: Cargo.toml  build.rs
Singed/src/: commands.rs  config.rs  main.rs  serializer.rs  util.rs
