[package]
name = "singed"
version = "0.1.2"
edition = "2021"
build = "build.rs"

[dependencies]
byteorder = "1.5.0"
lazy_static = "1.4.0"
nix = { version = "0.27.1", features = ["user", "net"] }
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["blocking"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
